[package]
name = "qstash-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.7.2"
serde_json = "=1.0.1"
urlencoding = "2.1.3"
http = "1.1.0"
tokio = { version="1.41.0", features = ["full"] }
futures = "0.3"
httpmock = "0.7.0"