[package]
name = "qstash-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.1"
urlencoding = "2.1.3"
http = "1.1.0"
futures = "0.3"
httpmock = "0.7.0"

[dev-dependencies]
tokio = { version="1.41.0", features = ["full"] }
lambda_runtime = "0.13.0"
aws-config = "1.5.10"
aws-sdk-secretsmanager = "1.53.0"
worker = "0.4.2"
